<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/loading_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="gone">

    <LinearLayout
        android:id="@+id/loading_bg"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.4"
        android:background="@color/black"
        android:orientation="horizontal" />

    <FrameLayout
        android:id="@+id/loader_fg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:animateLayoutChanges="true"
        android:background="@color/white"
        android:padding="@dimen/standard_padding">

        <LinearLayout
            android:id="@+id/single_joke_downloading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/extra_padding"
            android:paddingRight="@dimen/extra_padding"
            android:visibility="gone">

            <ProgressBar
                android:id="@+id/indeterminate_download_pb"
                style="?android:attr/progressBarStyleLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="@dimen/standard_padding" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/downloading_joke" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/multiple_jokes_downloading"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone"
            android:padding="@dimen/standard_padding">

            <TextView
                android:id="@+id/joke_progress_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/medium_padding"
                android:text="@string/downloading_joke_d" />

            <ProgressBar
                android:id="@+id/determinate_download_pb"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="@dimen/standard_padding" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/small_padding"
                android:paddingLeft="@dimen/standard_padding"
                android:paddingRight="@dimen/standard_padding">

                <TextView
                    android:id="@+id/percentage_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/percentage" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1" />

                <TextView
                    android:id="@+id/out_of_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/num_out_of_num" />


            </LinearLayout>

        </LinearLayout>


    </FrameLayout>

</FrameLayout>